# noriter

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/: before_install_linux.sh  script_linux.sh
cmake/: NoriterMacros.cmake
include/noriter/: AssertionMacros.h  CMakeLists.txt  Config.h.in  EigenHelpers.h  EnumeratorHelpers.h  Factory.h  Link.h  Macros.h  MathHelpers.h  ObjectManager.h  Property.h  Serializable.h  SfinaeTest.h  Singletone.h  Skeleton.h  Stopwatch.h  Types.h  noriter.h.in
plugins/testplugin/: CMakeLists.txt  testplugin.cpp  testplugin.h  testpluginDll.cpp
src/: CMakeLists.txt  Link.cpp  ObjectManager.cpp  Property.cpp  Serializable.cpp  Skeleton.cpp  Stopwatch.cpp
tests/: CMakeLists.txt  EigenHelpers_TEST.cpp  Enumerator_TEST.cpp  Factory_TEST.cpp  Property_TEST.cpp  SfinaeTest_TEST.cpp  Template_TEST.cpp
tests/experiments/: CMakeLists.txt  Template_TEST.cpp
tutorials/: CMakeLists.txt
tutorials/01_robotModelingBasic/: CMakeLists.txt  main.cpp
