file(GLOB_RECURSE NORITER_SOURCE_CODE ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

if(NORITER_BUILD_STATIC_LIBS)
  add_library(${PROJECT_NAME} STATIC ${NORITER_HEADERS} ${NORITER_SOURCE_CODE})
else()
  add_library(${PROJECT_NAME} SHARED ${NORITER_HEADERS} ${NORITER_SOURCE_CODE})
endif()

#target_link_libraries(${PROJECT_NAME} ${CCD_LIBRARIES} ${OCTOMAP_LIBRARIES} ${Boost_LIBRARIES})
#install(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION lib/ LIBRARY DESTINATION lib/)
